tests/ui/skip_impl_trait_ret.stderr
error[E0599]: no method named `make` found for reference `&dyn Dyn` in the current scope
  --> tests/ui/skip_impl_trait_ret.rs:23:15
   |
23 |     let _ = d.make();
   |               ^^^^ method not found in `&dyn Dyn`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Src` defines an item `make`, perhaps you need to implement it
  --> tests/ui/skip_impl_trait_ret.rs:5:1
   |
 5 | trait Src {
   | ^^^^^^^^^
